# diversifix

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: diversifix-AutoDeployTrigger-0da16758-7e6b-44ad-b008-1e4c3395a5cf.yml  publish.yml
backend/: pyproject.toml
backend/src/diversifix_server/: app.py  matches.py  wsgi.py
backend/src/diversifix_server/gpt/: matches.py
dev_cmds/: build-docker-image.ts  build-zip-file.ts  create-addin-manifest.ts  prepare-server.ts  start-api.ts
dev_cmds/utils/: docker.ts  paths.ts
diversifix_server/: app.py  prepare_list.py  requirements.in  requirements.txt  wsgi.py
diversifix_server/gpt/: __init__.py  api.py  matches.py  prompt.py
diversifix_server/morphy/: morphy.py
doc/: backend.md  data.md  development-environment.md  frontend.md  index.md  rule-lists.md  system-overview.md
inclusify_server/: matches.py
inclusify_server/morphy/: morphy.py
react-ui/: config-overrides.js  manifest.xml  package-lock.json  package.json
react-ui/public/: index.html  manifest.json  plain.html  taskpane.html
react-ui/src/: impressum-datenschutz.content.html  lizenzen.content.html  navigation-links.json
react-ui/src/common/: ImpressumAndDatenschutzLinks.tsx  PilotPhaseBanner.tsx
react-ui/src/common/debug-panel/: DebugPanel.tsx
react-ui/src/common/feature-flags/: feature-flags.ts
react-ui/src/common/icons/: DiversifixLogo.tsx  index.ts
react-ui/src/office-taskpane/: AddinTopButtonGroup.tsx  TaskpaneApp.tsx
react-ui/src/standalone/: NavigationBar.tsx  StandaloneApp.tsx
(+10 files in other folders)
